Tradução e início da configuração das páginas
Avanço na tradução - 22%
Tradução dos texto na pasta pawtucket/themes/default/locale - 100%
Início da configuração das páginas, colocando informações do museu e link para o site do EBA e do Facebook.
Retirada informação de localização dos objetos na página de detalhes do objeto.

--- a/pawtucket/themes/default/conf/collections.conf
+++ b/pawtucket/themes/default/conf/collections.conf
@@ -1,9 +1,9 @@
 # --- landing page vars
 # --- section title
-collections_section_name = Collections
+collections_section_name = Coleções
 
 # --- intro text
-collections_intro_text = Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla a sem in erat varius dapibus. Aliquam nec magna eget ligula efficitur ultrices. Donec sollicitudin massa in posuere viverra.
+collections_intro_text = Aqui se encontram as coleções dos objetos do Acervo Museológico do Museu D. João VI da Escola de Belas Artes da UFRJ.
 
 # --- collection type to dipslay on landing page
 landing_page_collection_type = collection
