--- a/pawtucket/themes/default/conf/contact.conf
+++ b/pawtucket/themes/default/conf/contact.conf
@@ -6,7 +6,7 @@ contact_email = { info@yourdomain.com }
 # --- check for security arithmetic setting in form
 check_security = 1
 
-contact_page_title = "Contact"
+contact_page_title = "Contato"
 item_inquiry_page_title = "Item Inquiry"
 
 # --- array of elements appearing in form - the key is the name of the form element
