Revisão de configurações do site
Tradução de alguns arquivos do pawtucket que não estavam mapeados anteriormente.

Remoção da possibilidade de se registrar/adicionar comentários.

Configurado corretamente a data de criação do objeto para que o pawtucket reconheça a mesma.

Revisão da página de pesquisa avançada, traduzindo e configurando a pesquisa por data.

Revisão dos resultados da "Pesquisa múltipla", removendo a imagem dos objetos e adicionando o número de inventário.

--- a/pawtucket/themes/mdjvi/conf/lightbox.conf
+++ b/pawtucket/themes/mdjvi/conf/lightbox.conf
@@ -108,7 +108,7 @@ availableFacets = []
 # default number of results per page/ajax load
 defaultHitsPerBlock = 36
 
-backLink = <i class='fa fa-angle-double-left'></i><div class='small'>Back</div>
+backLink = <i class='fa fa-angle-double-left'></i><div class='small'>Retornar</div>
 
 # Display name for lightbox section                                        
 lightboxDisplayName = lightbox
