--- a/pawtucket/themes/mdjvi/conf/browse.conf
+++ b/pawtucket/themes/mdjvi/conf/browse.conf
@@ -31,7 +31,7 @@ browseTypes = {
 				}
 			},
 			timeline = {
-				data = ca_objects.creation_date,
+				data = ca_objects.objectProductionDate,
 				display = {
 					title_template = <l>^ca_objects.preferred_labels.name</l> (^ca_objects.idno),
 					description_template = <p>^ca_objects.description</p>,
