--- a/pawtucket/themes/mdjvi/conf/detail.conf
+++ b/pawtucket/themes/mdjvi/conf/detail.conf
@@ -14,14 +14,14 @@ detailTypes = {
 		table = ca_objects,
 		restrictToTypes = [],
 		options = {
-			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Next</div>,
-			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Prev</div>,
-			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Back</div>,
+			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Próximo</div>,
+			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Anterior</div>,
+			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Retornar</div>,
 			
 			#
 			# Sharing
 			#
-			enableComments = 1,
+			enableComments = 0,
 			enableShare = 1,
 			enablePDF = 1,
 			
