Monografia e pequenas traduções
Atualização na monografia.
Pequenas traduções feitas em arquivos diversos.
Inserido novamente na tela de interface de usuário de um objeto o menu com o direito de acesso do item

--- a/pawtucket/themes/mdjvi/conf/app.conf
+++ b/pawtucket/themes/mdjvi/conf/app.conf
@@ -10,6 +10,8 @@ use_identifiers_in_urls = 0
 
 dont_enforce_access_settings = 1
 dont_allow_registration_and_login = 1
+locale_default = pt_BR
+ui_locales = [pt_BR]
 
 #
 # Front page set code
