--- a/pawtucket/themes/mdjvi/conf/detail.conf
+++ b/pawtucket/themes/mdjvi/conf/detail.conf
@@ -63,9 +63,9 @@ detailTypes = {
 		table = ca_entities,
 		restrictToTypes = [],
 		options = {
-			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Next</div>,
-			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Prev</div>,
-			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Back</div>,
+			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Próximo</div>,
+			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Anterior</div>,
+			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Retornar</div>,
 			enableComments = 0,
 			enableShare = 0,
 			map_attribute = ca_places.georeference,
@@ -78,9 +78,9 @@ detailTypes = {
 		table = ca_occurrences,
 		restrictToTypes = [],
 		options = {
-			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Next</div>,
-			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Prev</div>,
-			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Back</div>,
+			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Próximo</div>,
+			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Anterior</div>,
+			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Retornar</div>,
 			enableComments = 0,
 			enableShare = 0,
 		}
@@ -90,9 +90,9 @@ detailTypes = {
 		table = ca_places,
 		restrictToTypes = [],
 		options = {
-			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Next</div>,
-			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Prev</div>,
-			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Back</div>,
+			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Próximo</div>,
+			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Anterior</div>,
+			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Retornar</div>,
 			enableComments = 0,
 			enableShare = 0,
 		}
@@ -102,9 +102,9 @@ detailTypes = {
 		table = ca_collections,
 		restrictToTypes = [],
 		options = {
-			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Next</div>,
-			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Prev</div>,
-			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Back</div>,
+			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Próximo</div>,
+			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Anterior</div>,
+			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Retornar</div>,
 			enableComments = 0,
 			enableShare = 0,
 			enablePDF = 1,
@@ -117,9 +117,9 @@ detailTypes = {
 		table = ca_representation_annotations,
 		restrictToTypes = [],
 		options = {
-			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Next</div>,
-			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Prev</div>,
-			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Back</div>,
+			nextLink = <i class='fa fa-angle-right'></i><div class='small'>Próximo</div>,
+			previousLink = <i class='fa fa-angle-left'></i><div class='small'>Anterior</div>,
+			resultsLink = <i class='fa fa-angle-double-left'></i><div class='small'>Retornar</div>,
 			enableComments = 0,
 			enableShare = 0,
 		}
